Application avec une premiere vue en Kotlin

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,10 @@ captures/
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
 
 # Keystore files
 *.jks
@@ -53,3 +57,15 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+
