--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ captures/
 .idea/runConfigurations.xml
 .idea/vcs.xml
 .idea/codeStyleSettings.xml
+.idea/kotlinc.xml
+.idea/compiler.xml
+.idea/copyright
 
 # Keystore files
 *.jks
