--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ captures/
 .idea/kotlinc.xml
 .idea/compiler.xml
 .idea/copyright
+.idea/markdown-navigator.xml
+.idea/markdown-navigator
 
 # Keystore files
 *.jks
