--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
     // Stetho core
     compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'com.facebook.stetho:stetho-okhttp:1.3.1'
+
+    compile 'com.github.medyo:android-about-page:1.2.2'
 }
