--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".GameActivity"
-            >
-            <!--android:configChanges="orientation"-->
-            <!--android:screenOrientation="portrait"-->
+        <activity android:name=".GameActivity">
+
+            <!-- android:configChanges="orientation" -->
+            <!-- android:screenOrientation="portrait" -->
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -46,6 +45,11 @@
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
             </intent-filter>
         </receiver>
+
+        <activity android:name=".DifficultyActivity">
+        </activity>
+        <activity android:name=".ChoosePentatonicActivity">
+        </activity>
     </application>
 
 </manifest>
