Dirty cells calculation improved
Signed-off-by: OroshiX <oroshix@users.noreply.github.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GameActivity">
+        <activity
+            android:name=".GameActivity"
+            android:label="Game Pentatonic"
+            android:parentActivityName=".ChoosePentatonicActivity">
 
             <!-- android:configChanges="orientation" -->
             <!-- android:screenOrientation="portrait" -->
@@ -21,7 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".MenuActivity">
+        <activity
+            android:name=".MenuActivity"
+            android:label="Main menu Pentatonic">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -46,9 +51,13 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".DifficultyActivity">
+        <activity
+            android:name=".DifficultyActivity"
+            android:parentActivityName=".MenuActivity">
         </activity>
-        <activity android:name=".ChoosePentatonicActivity">
+        <activity
+            android:name=".ChoosePentatonicActivity"
+            android:parentActivityName=".DifficultyActivity">
         </activity>
     </application>
 
