--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp:1.3.1'
 
     compile 'com.github.medyo:android-about-page:1.2.2'
+
+    // For JSON
+    compile 'com.google.code.gson:gson:2.8.0'
 }
