ignore specific directory

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ Android-app/.idea/
 #Xcode user data - breakpoints / selected lines etc ...
 xcuserdata
 xcshareddata
+ignoreG
 
 #Backuped files - perso
 all.json-orig
